Tests/CompilerTests/negative/invalid-wildcard.hylo
//! no-std

fun main() { _ }
