Tests/CompilerTests/negative/invalid-wildcard.expected
negative/invalid-wildcard.hylo:3.15: error: expected '='
fun main() { _ }
              ^
